--- a/GamePlatform.Jogos.Infrastructure/GamePlatform.Jogos.Infrastructure.csproj
+++ b/GamePlatform.Jogos.Infrastructure/GamePlatform.Jogos.Infrastructure.csproj
@@ -14,6 +14,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
     </ItemGroup>
 
     <ItemGroup>
