Corrige etapa de deploy do workflow.yml

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,4 +63,4 @@ jobs:
         with:
           resourceGroup: 'gameplatform'
           containerAppName: 'gameplatform-jogos-api'
-          image: 'brunolazzara/gameplatform-jogos-fiap'
+          imageToDeploy: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
