Corrige localização no workflow de CD para o Azure Container App

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,5 +65,5 @@ jobs:
           containerAppName: 'gameplatform-jogos-api'
           imageToDeploy: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
           targetPort: 8081
-          location: 'Brazil South'
+          location: 'brazilsouth'
           containerAppEnvironment: 'gameplatform-apis'
