Adicionada integração com Elasticsearch para cadastro, atualização e remoção de jogos, inclusão de novas propriedades no modelo de jogo e ajustes em testes e migrações

--- a/GamePlatform.Jogos.Infrastructure/GamePlatform.Jogos.Infrastructure.csproj
+++ b/GamePlatform.Jogos.Infrastructure/GamePlatform.Jogos.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.1.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
             <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GamePlatform.Jogos.Domain\GamePlatform.Jogos.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
