--- a/GamePlatform.Jogos.Domain/GamePlatform.Jogos.Domain.csproj
+++ b/GamePlatform.Jogos.Domain/GamePlatform.Jogos.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.1.6" />
     </ItemGroup>
 
 </Project>
